implemented virtual threads and thread safety measures for #61